readecuacion home page

--- a/FacilityMobile/www/index.html
+++ b/FacilityMobile/www/index.html
@@ -7,9 +7,9 @@
 	<script src="scripts/jquery.mobile.js"></script>
 	<body>
 		<div data-role="page" id="index" data-title="Indice" align="center">
-			<table>
+			<table id="dashboard">
 				<tr>
-					<td><img src="icons/yopuedo.png" width="60px" height="60px"> <br>Yo Puedo</td>
+					<td ><img src="icons/yopuedo.png" width="60px" height="60px"> <br>Yo Puedo</td>
 					<td><img src="icons/economicos.png" width="60px" height="60px"> <br>Economicos</td>
 				</tr>
 				<tr>
