--- a/FacilityMobile/www/index.html
+++ b/FacilityMobile/www/index.html
@@ -11,31 +11,31 @@
 	});
 	</script>
 	<body>
-		<div data-role="page" id="index" data-title="Indice" align="center">
-			<div data-role="header" data-theme="b" style="text-align: center;">
+		<div data-role="page" id="index" data-title="HomePage" align="center">
+			<div data-role="header" data-theme="a" style="text-align: center;">
 				<img src="images/logo.png" ></img>
 			</div>
-			<div data-role="content" data-theme="a">
+			<div data-role="content" data-theme="b">
 				<table id="dashboard">
 					<tr>
-						<td ><img src="icons/yopuedo.png" width="60px" height="60px"> <br>Yo Puedo</td>
-						<td><img src="icons/economicos.png" width="60px" height="60px"> <br>Economicos</td>
+						<td ><img src="icons/yopuedo.png" width="50px" height="50px"> <br>Yo Puedo</td>
+						<td><img src="icons/economicos.png" width="50px" height="50px"> <br>Economicos</td>
 					</tr>
 					<tr>
-						<td><img src="icons/personas.png" width="60px" height="60px"> <br>Personas</td>
-						<td><img src="icons/produccion.png" width="60px" height="60px"> <br>Produccion</td>
+						<td><img src="icons/personas.png" width="50px" height="50px"> <br>Personas</td>
+						<td><img src="icons/produccion.png" width="50px" height="50px"> <br>Produccion</td>
 					</tr>
 					<tr>
-						<td><img src="icons/comercial.png" width="60px" height="60px"> <br>Comerciales</td>
-						<td><img src="icons/sociales.png" width="60px" height="60px"> <br>Sociales</td>
+						<td><img src="icons/comercial.png" width="50px" height="50px"> <br>Comerciales</td>
+						<td><img src="icons/sociales.png" width="50px" height="50px"> <br>Sociales</td>
 					</tr>
 					<tr>
 						<td>&nbsp;</td>
-						<td><img src="icons/emergency.png" width="60px" height="60px"> <br>Emergencias</td>
+						<td><img src="icons/emergency.png" width="50px" height="50px"> <br>Emergencias</td>
 					</tr>				
 				</table>
 			</div>
-			<div data-role="footer" data-theme="b">
+			<div data-role="footer" data-theme="a">
 				<h4>Powered by Eje Digital</h4>
 			</div>		
 		</div>
