--- a/FacilityMobile/www/index.html
+++ b/FacilityMobile/www/index.html
@@ -6,9 +6,14 @@
 	<script src="scripts/jquery.js"></script>
 	<script src="scripts/jquery.mobile.js"></script>
 	<script type="text/javascript">
-	$(document).ready(function() {
-
-	});
+	 $(document).ready(function(){
+	       setTimeout(alertMsg,3000); 
+	}
+	 
+	 function alertMsg() {
+		 alert("Hola");
+	 }
+	 
 	</script>
 	<body>
 		<div data-role="page" id="index" data-title="HomePage" align="center">
