--- a/FacilityMobile/www/index.html
+++ b/FacilityMobile/www/index.html
@@ -11,7 +11,7 @@
 	 }
 	 
 	</script>
-	<body>
+	<body onload="alert("Hola2")">
 		<div data-role="page" id="index" data-title="HomePage" align="center">
 			<div data-role="header" data-theme="a" style="text-align: center;">
 				<img src="images/logo.png" ></img>
