--- a/FacilityMobile/www/index.html
+++ b/FacilityMobile/www/index.html
@@ -19,7 +19,7 @@
 			<div data-role="content" data-theme="b">
 				<table id="dashboard">
 					<tr>
-						<td ><img src="icons/yopuedo.png" width="50px" height="50px"> <br>Yo Puedo</td>
+						<td ><img src="icons/yopuedo.png" width="50px" height="50px" onclick="alert('3');"><br>Yo Puedo</td>
 						<td><img src="icons/economicos.png" width="50px" height="50px"> <br>Economicos</td>
 					</tr>
 					<tr>
