--- a/FacilityMobile/www/index.html
+++ b/FacilityMobile/www/index.html
@@ -71,7 +71,7 @@
 				</table>
 			</div>
 			<div data-role="footer" data-theme="a">
-				<h4><a href="http://ejedigital.cl">Powered by Eje Digital</a></h4>
+				<h4><a href="http://www.ejedigital.cl">Powered by Eje Digital</a></h4>
 			</div>		
 		</div> <!-- Fin página -->
 		
